--- a/index.html
+++ b/index.html
@@ -1,11 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Happy New year</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <header class="banner-container">
+        <div class="banner-content">
+            <p>Happy New year</p>
+            <h1>New Year Party<br>Celebration</h1>
+        </div>
+    </header>
+    <main>
+        <section class="discount">
+            <div class="ds-container">
+                <div class="ds-title">
+                    <h1 id="of-title">65% OFF</h1>
+                    <p id="main-title">OUR HOLIDAY DEALS ARE BETTER</p>
+                    <br>
+                    <h3 id="c-title">ALL CATEGORIES</h3>
+                </div>
+                <div class="ds-img">
+                    <img src="images/New Year Photo.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section class="wellcome">
+            <div class="description">
+                <h1 class="well-title">Welcome to <br> midnight party</h1>
+                <p class="well-sub-title">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie
+                    malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                <h3 class="ss-title">JOIN NOW</h3>
+            </div>
+            <div class="well-img">
+                <img src="images/Group 70.png" alt="">
+            </div>
+        </section>
+        <section class="time">
+            <div class="time-title">
+                <div>
+                    <h3><span id="red">Place:</span> New Park Hotel
+                    </h3>
+                    <br>
+                    <h3><span id="red">Date:</span> 31 December Night 2023
+                    </h3>
+                    <br>
+                    <h3><span id="red">Time:</span> Evening 7.30 pm to 12.30 am</h3>
+                </div>
+                <div class="btn-div">
+
+                    <button class="btn">JOIN NOW</button>
+                </div>
+            </div>
+        </section>
+        <section class="upcoming">
+            <div class="best-offer">
+                <h3 class="best-offer-sub-title">NEW BEST OFFER</h3>
+                <h1 class="best-offer-title">Coming Soon</h1>
+                <p class="best-offer-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            </div>
+            <div class="image">
+                <img src="images/Ellipse 1.png" alt="" class="image-up">
+            </div>
+            <div class="new-year">
+                <h1 class="new-year-content">2024</h1>
+                <p class="best-offer-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.
+                </p>
+                <img class="image-3" src="images/Group 96.png" alt="">
+            </div>
+        </section>
+        <section class="holydays">
+            <div>
+                <h5 class="holydays-title">WHAT IS FUNCTIONAL</h5>
+                <h1 class="holydays-sub-title"><span>Holidays</span> Sale 50%</h1>
+                <p class="holydays-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas
+                    sedmolestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus qu
+                    am id fermentum amet amet sit consectetur.</p>
+
+            </div>
+        </section>
+        <section class="ny-gift">
+            <div class="ny-container">
+                <div class="red-line">
+                    <img src="images/Rectangle 2.png" alt="">
+                </div>
+                <div class="images-content">
+                    <div class="gift-box">
+                        <img src="images/Group 75.png" alt="">
+                    </div>
+                    <div class="second-content">
+                        <img src="images/Group 44.png" alt="">
+                    </div>
+                </div>
+
+            </div>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
+
 </html>
